[project]
name = "my-debauch-devotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[job-queue]>=22.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.scripts]
chronos = "chronos.main:main"
